--- a/EggTimer/Base.lproj/Main.storyboard
+++ b/EggTimer/Base.lproj/Main.storyboard
@@ -120,6 +120,21 @@
                                     </stackView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nJN-th-c5K" userLabel="Timer View">
                                         <rect key="frame" x="0.0" y="571.5" width="374" height="246.5"/>
+                                        <subviews>
+                                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progressViewStyle="bar" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="oei-KM-CFM">
+                                                <rect key="frame" x="0.0" y="120.5" width="374" height="6"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="5" id="Yfn-4Z-Bup"/>
+                                                </constraints>
+                                                <color key="progressTintColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <color key="trackTintColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            </progressView>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="oei-KM-CFM" firstAttribute="leading" secondItem="nJN-th-c5K" secondAttribute="leading" constant="0.10000000000000001" id="nLy-nN-DQE"/>
+                                            <constraint firstItem="oei-KM-CFM" firstAttribute="centerY" secondItem="nJN-th-c5K" secondAttribute="centerY" id="t9D-Bc-L4R"/>
+                                            <constraint firstAttribute="trailing" secondItem="oei-KM-CFM" secondAttribute="trailing" constant="0.10000000000000001" id="yNa-Jw-q6h"/>
+                                        </constraints>
                                     </view>
                                 </subviews>
                             </stackView>
@@ -134,6 +149,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="progressView" destination="oei-KM-CFM" id="bP2-4i-gJA"/>
                         <outlet property="titleLabel" destination="XLm-5r-pSP" id="v45-oI-Pvl"/>
                     </connections>
                 </viewController>
